# heatshrink

./: CMakeLists.txt  README.md  README.zh.md  benchmark.sh  heatshrink.c  heatshrink_config.h
cmake/: cmake_uninstall.cmake.in
src/: heatshrink_decoder.c  heatshrink_encoder.c
test/: test_heatshrink_dynamic.c  test_heatshrink_dynamic_theft.c  test_heatshrink_static.c
